fixed warnings; fixed pricing more info button on mobile

--- a/src/assets/scss/theme/sections/_pricing.scss
+++ b/src/assets/scss/theme/sections/_pricing.scss
@@ -42,7 +42,13 @@
 	}
 
 	&-more-info {
-		margin-top: 60px;
+		&-container {
+			margin-top: 20px;
+			margin-bottom: -10px;
+			display: flex;
+			justify-content: center;
+		}
+
 		color: #919EB7 !important;
 		font-size: 15px;
 		text-decoration: none !important;
@@ -127,6 +133,13 @@ ul.pricing-item-features-list {
 
 			&:nth-child(3n+3) {
 				top: 100px;
+			}
+		}
+
+		&-more-info {
+			&-container {
+				margin-top: -70px;
+				margin-bottom: 30px;
 			}
 		}
 	}
